# daisychains

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
.devcontainer/: devcontainer.json
include/daisychains/: adaptor.h  chain.h  concepts.h  cycle.h  drop.h  drop_while.h  elements_equal.h  filter.h  from_range.h  fwd.h  generator.h  link.h  meta.h  output_passthrough.h  push_result.h  repeat.h  take.h  take_while.h  terminal.h  to.h  transform.h
test/: chain_test.cpp  cycle_test.cpp  drop_test.cpp  drop_while_test.cpp  elements_equal_test.cpp  filter_test.cpp  incomplete_chain_test.cpp  repeat_test.cpp  take_test.cpp  take_while_test.cpp  transform_test.cpp
